--- a/develop/templates/base.html
+++ b/develop/templates/base.html
@@ -1,198 +1,120 @@
 {% load static %}
-<html>
+<html lang="en">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/static/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Saasy {% block title %}{% endblock %}</title>
 
-    <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" />
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    <title>{% block title %}{% endblock %}</title>
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" href="/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json">
+    <link rel="mask-icon" href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
+    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico">
+    <meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#563d7c">
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
+    <!-- Custom styles for this template -->
+    <link href="custom.css" rel="stylesheet">
     {% block extra_css %}{% endblock %}
+
     {% block extra_head_js %}{% endblock %}
-</head>
 
-<body>
-  <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-black justify-content-between fixed-top">
-      <div class="navbar-nav">
-          <a class="nav-link d-flex align-items-center" href="/">
-              <img src="{% static 'img/logo.png' %}" class="logo mr-4">
-              <div class="lead d-none d-xl-inline text-nowrap">SITE</div>
-          </a>
-      </div>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarContent">
-        <ul class="navbar-nav ml-auto mr-4">
-          {% comment %} <li class="nav-item mx-md-2">
-            <a class="nav-link font-weight-bold hideNoES6" href="/search">NEWS</a>
-          </li> {% endcomment %}
-          <li class="nav-item mx-md-2">
-            <a class="nav-link font-weight-bold hideNoES6" href="/pages/contact">CONTACT</a>
-          </li>
-          <li class="nav-item mx-md-2">
-            {% if request.user.is_authenticated %}
-              <a class="nav-link font-weight-bold text-nowrap" href="{% url 'account_logout' %}">LOG OUT</a>
-            {% else %}
-              <a class="nav-link font-weight-bold hideNoES6 text-nowrap" href="{% url 'account_login' %}"
-                  data-container="body"
-                  data-toggle="popover"
-                  data-placement="bottom"
-                  data-html="true"
-                  data-title="Log In"
-                  data-target="#popover-content-login"
-              >LOG IN</a>
-            {% endif %}
-          </li>
-        </ul>
-        {% comment %} <form class="form-inline flex-nowrap mt-2 mt-md-0 mb-0">
-          <input class="form-control w-auto square-corners bg-dark no-border" type="text" placeholder="Find applications..." aria-label="Find a course">
-          <button class="form-control btn btn-success ml-0 square-corners no-border w-auto" type="submit">></button>
-        </form> {% endcomment %}
-      </div>
-    </nav>
-  </header>
+  </head>
+  <body>
 
-  <!-- Begin page content -->
-  <noscript>
-      <div class="text-center bg-danger text-light">You must have JavaScript enabled to use this site.</div>
-  </noscript>
-  <main role="main" class="container-fluid p-0">
-  {% block react %}{% comment %}Optional content section{% endcomment %}
-
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-success">
-                <a class="close">×</a>
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endif %}
-
-    {% comment %} <!-- breadcrumps -->
-    {% if breadcrumbs %}
-      <div class="row">
-        <div class="span12">
-            <ul class="breadcrumb">
-              <li>breakcrumb 1</li>
-              <li class="active">breakcrumb 2</li>
-            </ul>
-      </div>
-    </div>
-    {% endif %} {% endcomment %}
-
-    {% block content %}{% endblock %}{% comment %}End of the normal content section{% endcomment %}
-  {% endblock %}
-  </main>
-
-  <footer class="footer">
-      <nav class="navbar navbar-dark bg-dark flex-column pb-5">
-          <div class="d-flex flex-column flex-md-row justify-content-around w-100 mt-5">
-              <div class="d-flex flex-column">
-                  <h5 class="mb-4">Site</h5>
-                  <ul class="navbar-nav flex-column">
-                      <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary" href="/">Home</a>
-                      </li>
-                      {% comment %} <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary" href="/pages/careers">Careers</a>
-                      </li> {% endcomment %}
-                      <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary" href="/pages/about">About</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary" href="/pages/legal">Legal</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary text-nowrap" href="{% url 'account_signup' %}">Sign Up</a>
-                      </li>
-                  </ul>
-              </div>
-              <div class="d-flex flex-column my-5 my-md-0">
-                  <h5 class="mb-4 text-nowrap">Publishers</h5>
-                  <ul class="navbar-nav flex-column">
-                      <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary text-nowrap" href="/search">Publisher Program</a>
-                      </li>
-                      {% comment %} <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary text-nowrap" href="/pages/categories">Learning Categories</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary" href="/pages/teachers">Teachers</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary" href="/pages/degrees">Degrees</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary text-nowrap" href="/academics">Academic Information</a>
-                      </li> {% endcomment %}
-                  </ul>
-              </div>
-              <div class="d-flex flex-column">
-                  <h5 class="mb-4 text-nowrap">FIND US ON</h5>
-                  <ul class="navbar-nav flex-column">
-                      {% comment %} <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary" href="http://facebook.com">Facebook</a>
-                      </li> {% endcomment %}
-                      <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary" href="http://twitter.com">Twitter</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary" href="http://linkedin.com">LinkedIn</a>
-                      </li>
-                      {% comment %} <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary" href="http://instagram.com">Instagram</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link p-0 text-secondary" href="http://youtube.com">YouTube</a>
-                      </li> {% endcomment %}
-                  </ul>
-              </div>
-          </div>
-          <div class="mt-5">
-              <ul class="navbar-nav flex-row justify-content-center">
-                  {% comment %} <li class="nav-item">
-                      <a class="nav-link p-0 mx-2" href="http://facebook.com">
-                          <img src="{% static 'img/icon-fb-white.svg' %}" />
-                      </a>
-                  </li> {% endcomment %}
-                  <li class="nav-item">
-                      <a class="nav-link p-0 mx-2" href="http://twitter.com">
-                          <img src="{% static 'img/icon-tw-white.svg' %}" />
-                      </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link p-0 mx-2" href="http://linkedin.com">
-                          <img src="{% static 'img/icon-li-white.svg' %}" />
-                      </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link p-0 mx-2" href="/pages/contact">
-                          <img src="{% static 'img/icon-email-white.svg' %}" />
-                      </a>
-                  </li>
-
-              </ul>
-          </div>
-          <div class="text-muted mt-4">&copy 2016-2020.  All rights reserved.</div>
+    <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+      <h5 class="my-0 mr-md-auto font-weight-normal">Django Saasy</h5>
+      <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-2 text-dark" href="/">Home</a>
       </nav>
-  </footer>
+      {% if request.user.is_authenticated %}
+      <a class="btn btn-outline" href="{% url 'account_logout' %}">Logout</a>
+      {% else %}
+      <a class="btn btn-outline-success" href="{% url 'account_login' %}">Login</a>
+      <a class="btn btn-outline-primary" href="#">Sign up</a>
+      {% endif %}
+    </header>
 
-  <!-- end of regular html -->
+    <div class="container">
+      {% if messages %}
+      {% for message in messages %}
+      <div class="alert alert-dismissible {% if message.tags %} alert-{{ message.tags }}{% endif %}">
+          <a class="close" data-dismiss="alert">×</a>
+          {{ message }}
+      </div>
+      {% endfor %}
+      {% endif %}
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.bundle.min.js"></script>
-  <script src="{% static 'js/modernizr-custom.js' %}"></script>
-  <script src="{% static 'js/base.js' %}"></script>
+    {% block content %}
+    Saasy Base HTML Template
+    {% endblock %}
 
+    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+      <div class="row">
+        <div class="col-12 col-md">
+          <img class="mb-2" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
+          <small class="d-block mb-3 text-muted">© 2020</small>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Features</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Cool stuff</a></li>
+            <li><a class="text-muted" href="#">Random feature</a></li>
+            <li><a class="text-muted" href="#">Team feature</a></li>
+            <li><a class="text-muted" href="#">Stuff for developers</a></li>
+            <li><a class="text-muted" href="#">Another one</a></li>
+            <li><a class="text-muted" href="#">Last time</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Resources</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Resource</a></li>
+            <li><a class="text-muted" href="#">Resource name</a></li>
+            <li><a class="text-muted" href="#">Another resource</a></li>
+            <li><a class="text-muted" href="#">Final resource</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>About</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Team</a></li>
+            <li><a class="text-muted" href="#">Locations</a></li>
+            <li><a class="text-muted" href="#">Privacy</a></li>
+            <li><a class="text-muted" href="#">Terms</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </div>
 
-  {% block extra_js %}{% endblock %}
+{% block extra_js %}{% endblock %}
 
 </body>
 </html>
