working on navigation flow

--- a/saasy/templates/saasy/index.html
+++ b/saasy/templates/saasy/index.html
@@ -3,5 +3,5 @@
 {% block title %}Saasy - Home{% endblock %}
 
 {% block content %}
-<h1>Saasy Base HTML Template</h1>
+<h1>Saasy Dashboard</h1>
 {% endblock %}
