--- a/develop/templates/base.html
+++ b/develop/templates/base.html
@@ -69,7 +69,7 @@
                 User
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="{% url 'saasy:dashboard' %}">Saasy Dashboard</a>
                 <a class="dropdown-item" href="#">Another action</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
