--- a/saasy/templates/saasy/organization_detail.html
+++ b/saasy/templates/saasy/organization_detail.html
@@ -15,16 +15,41 @@
     </div>
 
     <div class="col-9">
-      <h1><small>Organization:</small> {{ object.name }}</h1>
+      <h3><small>Organization:</small> {{ object.name }}</h3>
       <hr>
       Detail
-      <h3>Teams</h3>
-      list
-      Add
-      <h3>Projects</h3>
-      list
-      Add
-      <h3>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Teams</h4>
+        </div>
+        <div class="col-4 text-right">
+          <a href="{% url "saasy:organization-create" %}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Team</a>
+        </div>
+      </div>
+
+      <ul class="list-group">
+      {% for team in object.teams.all %}<li class="list-group-item d-flex justify-content-between align-items-center"><a href="#">{{ team.name }}</a></li>{% endfor %}
+      </ul>
+
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Projects</h4>
+        </div>
+        <div class="col-4 text-right">
+          <a href="{% url "saasy:organization-create" %}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Project</a>
+        </div>
+      </div>
+
+      {% if object.projects.all %}
+      <ul class="list-group">
+      {% for project in object.projects.all %}<li class="list-group-item d-flex justify-content-between align-items-center"><a href="#">{{ project.name }}</a></li>{% endfor %}
+      </ul>
+      {% else %}
+      <i>No projects yet</i>
+      {% endif %}
+
     </div>
   </div>
 
