--- a/saasy/templates/saasy/organization_list.html
+++ b/saasy/templates/saasy/organization_list.html
@@ -16,15 +16,20 @@
     </div>
 
     <div class="col-9">
-      <h3>Organizations</h3><a href="{% url "saasy:organization-create" %}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Organization</a>
 
+      <div class="row">
+        <div class="col">
+          <h4>Organizations</h4>
+        </div>
+        <div class="col-4 text-right">
+          <a href="{% url "saasy:organization-create" %}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Organization</a>
+        </div>
+      </div>
 
-    <ul class="list-group">
-    {% for org in object_list %}<li class="list-group-item d-flex justify-content-between align-items-center"><a href="{{ org.get_absolute_url }}">{{ org.name }}</a></li>{% endfor %}
-    </ul>
+      <ul class="list-group">
+      {% for org in object_list %}<li class="list-group-item d-flex justify-content-between align-items-center"><a href="{{ org.get_absolute_url }}">{{ org.name }}</a></li>{% endfor %}
+      </ul>
     
-
-
     </div>
   </div>
 
