--- a/saasy/templates/saasy/team_form.html
+++ b/saasy/templates/saasy/team_form.html
@@ -1,7 +1,7 @@
 {% extends "saasy/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Project Edit{% endblock %}
+{% block title %}Team Edit{% endblock %}
 
 {% block content %}
 
