--- a/saasy/templates/saasy/dashboard.html
+++ b/saasy/templates/saasy/dashboard.html
@@ -9,12 +9,7 @@
   <div class="row">
 
     <div class="col">
-      <ul class="list-group">
-        <a href="{% url "saasy:dashboard" %}" class="list-group-item list-group-item-action active">Dashboard</a>
-        <a href="{% url "saasy:organization-list" %}" class="list-group-item list-group-item-action">Organizations</a>
-        <a href="#" class="list-group-item list-group-item-action">Teams</a>
-        <a href="#" class="list-group-item list-group-item-action">Projects</a>
-      </ul>
+      {% include "./includes/settings_menu.html" with active="dashboard" %}
     </div>
 
     <div class="col-9">
