--- a/saasy/templates/saasy/organization_list.html
+++ b/saasy/templates/saasy/organization_list.html
@@ -1,18 +1,13 @@
 {% extends "saasy/base.html" %}
 
-{% block title %}Saasy - Home{% endblock %}
+{% block title %}Organizations{% endblock %}
 
 {% block content %}
 
 
   <div class="row">
     <div class="col">
-      <ul class="list-group">
-        <a href="{% url "saasy:dashboard" %}" class="list-group-item list-group-item-action">Dashboard</a>
-        <a href="{% url "saasy:organization-list" %}" class="list-group-item list-group-item-action active">Organizations</a>
-        <a href="#" class="list-group-item list-group-item-action">Teams</a>
-        <a href="#" class="list-group-item list-group-item-action">Projects</a>
-      </ul>
+      {% include "./includes/settings_menu.html" with active="organization" %}
     </div>
 
     <div class="col-9">
@@ -22,12 +17,24 @@
           <h4>Organizations</h4>
         </div>
         <div class="col-4 text-right">
-          <a href="{% url "saasy:organization-create" %}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Organization</a>
+          <a href="{% url "saasy:organization-create" %}" class="btn btn-outline-success btn-sm" role="button" aria-pressed="true">Add Organization</a>
         </div>
       </div>
 
       <ul class="list-group">
-      {% for org in object_list %}<li class="list-group-item d-flex justify-content-between align-items-center"><a href="{{ org.get_absolute_url }}">{{ org.name }}</a></li>{% endfor %}
+      {% for org in object_list %}<li class="list-group-item d-flex justify-content-between align-items-center">
+
+      <div class="row w-100">
+        <div class="col">
+          <a href="{{ org.get_absolute_url }}">{{ org.name }}</a>
+        </div>
+        {% if not org.personal %}
+        <div class="col-4 text-right">
+          <a href="{{ org.get_update_url }}" class="btn btn-outline-secondary btn-sm" role="button" aria-pressed="true">Update</a>
+        </div>
+        {% endif %}
+      </div>
+          </li>{% endfor %}
       </ul>
     
     </div>
