--- a/saasy/templates/saasy/team_detail.html
+++ b/saasy/templates/saasy/team_detail.html
@@ -1,6 +1,6 @@
 {% extends "saasy/base.html" %}
 
-{% block title %}Saasy - Home{% endblock %}
+{% block title %}Team Detail{% endblock %}
 
 {% block content %}
 <h1>Organization Detail</h1>
@@ -8,14 +8,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-
-<ul class="list-group">
-  <a href="{% url "saasy:dashboard" %}" class="list-group-item list-group-item-action">Dashboard</a>
-  <a href="#" class="list-group-item list-group-item-action">Organizations</a>
-  <a href="#" class="list-group-item list-group-item-action active">Teams</a>
-  <a href="#" class="list-group-item list-group-item-action">Projects</a>
-</ul>
-
+      {% include "./includes/settings_menu.html" with active="team" %}
     </div>
     <div class="col-9">
 
