--- a/saasy/templates/saasy/organization_detail.html
+++ b/saasy/templates/saasy/organization_detail.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="col-9">
-      <h3><small>Organization:</small> {{ object.name }}</h3>
+      <h2>Organization: {{ object.name }}</h2>
       <hr>
       Details
 
@@ -20,13 +20,13 @@
           <h4>Projects</h4>
         </div>
         <div class="col-4 text-right">
-          <a href="{% url "saasy:project-create" %}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Project</a>
+          <a href="{% url "saasy:project-create" %}?{{ object.slug }}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Project</a>
         </div>
       </div>
 
       {% if object.projects.all %}
       <ul class="list-group">
-      {% for project in object.projects.all %}<li class="list-group-item d-flex justify-content-between align-items-center"><a href="#">{{ project.name }}</a></li>{% endfor %}
+      {% for project in object.projects.all %}<li class="list-group-item d-flex justify-content-between align-items-center"><a href="{{ project.get_absolute_url }}">{{ project.name }}</a></li>{% endfor %}
       </ul>
       {% else %}
       <i>No projects yet</i>
@@ -38,12 +38,12 @@
           <h4>Teams</h4>
         </div>
         <div class="col-4 text-right">
-          <a href="{% url "saasy:team-create" %}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Team</a>
+          <a href="{% url "saasy:team-create" %}?{{ object.slug }}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Team</a>
         </div>
       </div>
 
       <ul class="list-group">
-      {% for team in object.teams.all %}<li class="list-group-item d-flex justify-content-between align-items-center"><a href="#">{{ team.name }}</a></li>{% endfor %}
+      {% for team in object.teams.all %}<li class="list-group-item d-flex justify-content-between align-items-center"><a href="{{ team.get_absolute_url }}">{{ team.name }}</a></li>{% endfor %}
       </ul>
 
       <hr>
