--- a/saasy/templates/saasy/project_form.html
+++ b/saasy/templates/saasy/project_form.html
@@ -7,16 +7,16 @@
 
   <div class="row">
     <div class="col">
-      {% include "./includes/settings_menu.html" with active="organization" %}
+      {% include "./includes/settings_menu.html" with active="project" %}
     </div>
 
     <div class="col-9">
-      <h3>Organization: {% if object %}{{ object.name }}{%else%}Add{%endif%}</h3>
+      <h2>Project: {% if object %}{{ object.name }}{%else%}Add{%endif%}</h2>
       <hr>
-        <form method="post"  action="{% url 'saasy:organization-create' %}">
+        <form method="post"  action="{% url 'saasy:project-create' %}">
           {% csrf_token %}
           {{ form|crispy }}
-          <a class="btn btn-warning" href="{% url 'saasy:organization-list' %}" role="button">Cancel</a> <button type="submit" class="btn btn-primary">{% if object %}Update{%else%}Add{%endif%}</button>
+          <a class="btn btn-warning" href="{% url 'saasy:project-list' %}" role="button">Cancel</a> <button type="submit" class="btn btn-primary">{% if object %}Update{%else%}Add{%endif%}</button>
         </form>
     </div>
   </div>
