--- a/saasy/templates/saasy/organization_detail.html
+++ b/saasy/templates/saasy/organization_detail.html
@@ -20,7 +20,7 @@
           <h4>Projects</h4>
         </div>
         <div class="col-4 text-right">
-          <a href="{% url "saasy:project-create" %}?{{ object.slug }}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Project</a>
+          <a href="{% url "saasy:project-create" %}?org={{ object.slug }}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Project</a>
         </div>
       </div>
 
@@ -38,7 +38,7 @@
           <h4>Teams</h4>
         </div>
         <div class="col-4 text-right">
-          <a href="{% url "saasy:team-create" %}?{{ object.slug }}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Team</a>
+          <a href="{% url "saasy:team-create" %}?org={{ object.slug }}" class="btn btn-light btn-lg active btn-sm" role="button" aria-pressed="true">Add Team</a>
         </div>
       </div>
 
