--- a/develop/templates/base.html
+++ b/develop/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/static/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="A simple project for setting up common features of SaaS based applications">
 
     <title>Saasy {% block title %}{% endblock %}</title>
 
@@ -49,8 +49,7 @@
   <body>
 
     <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-      <h5 class="my-0 mr-md-auto font-weight-normal">Django Saasy</h5>
-
+      <h5 class="my-0 mr-md-auto font-weight-normal">Saasy</h5>
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
