Updated Doc generation configuration Working out details with Teams

--- a/saasy/templates/saasy/project_detail.html
+++ b/saasy/templates/saasy/project_detail.html
@@ -10,9 +10,9 @@
     </div>
     <div class="col-9">
 
-    <h2>Project</h2>
+    <h2>{{ object.name }}</h2>
 
-    Detail
+
 
     </div>
   </div>
