--- a/saasy/templates/saasy/team_list.html
+++ b/saasy/templates/saasy/team_list.html
@@ -21,21 +21,26 @@
         </div>
       </div>
 
-      <ul class="list-group">
-      {% for team in object_list %}<li class="list-group-item d-flex justify-content-between align-items-center">
-
-      <div class="row w-100">
-        <div class="col">
-          <a href="{{ team.get_absolute_url }}">{{ team.name }}</a>
-        </div>
-        {% if not team.personal %}
-        <div class="col-4 text-right">
-          <a href="{{ team.get_update_url }}" class="btn btn-outline-secondary btn-sm" role="button" aria-pressed="true">Update</a>
-        </div>
-        {% endif %}
-      </div>
-          </li>{% endfor %}
-      </ul>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            {% comment %} <th scope="col"></th> {% endcomment %}
+            <th scope="col" class="text-left">Name</th>
+            <th scope="col" class="text-left">Members</th>
+            <th scope="col"></th>
+          </tr>
+        </thead>
+        <tbody>
+        {% for team in object_list %}
+          <tr>
+            {% comment %} <th scope="row"></th> {% endcomment %}
+            <td class="text-left"><a href="{{ team.get_absolute_url }}">{{ team.name }}</a></td>
+            <td class="text-left">(3)</td>
+            <td class="text-right"><a href="{{ team.get_update_url }}" class="btn btn-outline-secondary btn-sm" role="button" aria-pressed="true">Update</a></td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
     
     </div>
   </div>
